[package]
name = "slippy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tulisp = { path = "../tulisp" }
swayipc-async = "2.0.1"
swayipc-types = "1.1.1"
tokio = { version = "1", features = ["full"] }
